--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
+    "http": "^0.0.1-security",
+    "socket.io-client": "^4.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-socket.io": "^3.0.10",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
