--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
