--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "chart.js": "^3.4.1",
+    "chart.js": "2",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.5",
     "vue": "^2.6.11",
